# open-assistant

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  install.sh  mkdocs.yml  pyproject.toml  supervisord.conf  supervisord.validate.conf
.github/: CODEOWNERS
.github/scripts/: generate-release-notes.mjs
.github/workflows/: ci.yml  create-new-release.yml  docker-build-push.yml
docs/: README.md  development-checklist.md  index.md  mcp-servers.md  plugin-schema.md
docs/architecture/: agents.md  capabilities.md  database-schema.md  software-architecture.md  solution-architecture.md  system-architecture.md
docs/integrations/: brave.md  browser.md  google.md  google_ads.md  google_navigator.md  google_news.md  index.md  llm-providers.md  microsoft.md  mistral_ocr.md  nextcloud.md  notion.md  slack.md  toggl.md  whatsapp.md  whisper.md
docs/setup/: configuration.md  development.md
docs/stylesheets/: extra.css
src/: __init__.py  main.py
src/agents/: __init__.py  base.py  registry.py
src/api/: __init__.py  agents.py  artifacts.py  auth.py  brave.py  browser.py  chat.py  conversations.py  cron_jobs.py  future_tasks.py  google.py  google_ads.py  google_navigator.py  google_news.py  integrations.py  managed.py  mcp.py  mistral_ocr.py  monitoring.py  nextcloud.py  notion.py  outlook.py  plugins.py  prompts.py  pwa.py  settings.py  skills.py  slack.py  whatsapp.py  whisper.py  yahoo_finance.py
src/core/: __init__.py  concurrency.py  config.py  database.py  dependencies.py  encryption.py  jwt.py  llm_client.py  transparency_logger.py  usage_recorder.py
src/core/migrations/: 043_oss_db_init.sql  044_google_drive_tools.sql  045_toggl_integration.sql  046_google_ads_integration.sql  047_plugin_system.sql  048_recipes.sql  049_remove_google_drive_write_tools.sql  050_add_create_html_tool.sql  051_scheduled_prompts_messaging.sql  052_add_cron_execution_lock_columns.sql  053_artifacts.sql  054_coordinator_artifact_awareness.sql  054_search_artifacts_tool.sql  055_coordinator_artifact_awareness.sql  055_plugin_creator_agent.sql  056_coordinator_slack_notify_awareness.sql  057_google_docs_slides_edit_tools.sql  057_llm_consumption.sql  058_messages_internal_flag.sql
src/core/repositories/: __init__.py  agent_task.py  artifact.py  audit.py  base.py  conversation.py  credentials.py  cron_job.py  future_task.py  llm_consumption.py  memory.py  message.py  prompts.py  settings.py  skill.py
src/core/tools/: __init__.py  (+5 more)
src/integrations/: __init__.py
src/models/: __init__.py  agents.py  analysis.py  artifacts.py  batch.py  brave.py  browser.py  calculator.py  config.py  conversation.py  cron_jobs.py  document.py  future_tasks.py  google.py  google_ads.py  google_news.py  loop.py  mcp.py  memory.py  monitoring.py  nextcloud.py  notion.py  outlook.py  plan_tools.py  plugin.py  plugin_builder.py  python_exec.py  search.py  settings.py  skill.py  skills.py  slack.py  whatsapp.py  yahoo_finance.py
src/plugins/: __init__.py  openapi_import.py  plugin_schema.json
src/services/: analysis.py  artifacts.py  async_task_dispatcher.py  base.py  brave.py  browser.py  calculator.py  conversation.py  cron_job.py  document.py  embedding.py  future_task.py  google.py  google_ads.py  google_news.py  mcp_service.py  memory.py  message_handler.py  mistral_ocr.py  monitoring.py  nextcloud.py  notion.py  outlook.py  plan_helpers.py  planner.py  plugin_service.py  python_agent.py  python_exec.py  settings.py  slack.py  system.py  transcription.py  whatsapp.py  whatsapp_media.py  whisper.py  yahoo_finance.py
src/ui/: __init__.py
src/utils/: json_utils.py  logger.py  settings.py  tmp.py  token_counter.py
tests/: README.md  __init__.py  conftest.py  test_adaptive_planning.py  test_agents.py  test_async_task_dispatcher.py  test_azure_devops_plugin.py  test_brave_search.py  test_browser.py  test_conversation_history.py  test_cron_jobs.py  test_future_tasks.py  test_iterative_loops.py  test_json_utils.py  test_llm.py  test_mcp_service.py  test_message_contextualization.py  test_migrations.py  test_notify_owner.py  test_notion_client.py  test_notion_service.py  test_outlook_calendar_dates.py  test_outlook_token_refresh.py  test_plugin_array_params.py  test_plugin_builder.py  test_plugin_dual_auth.py  test_plugin_schema_docs.py  test_python_agent.py  test_skill_aware_planning.py  test_tiered_memory.py  test_usage_recorder.py
(+57 files in other folders)
