[project]
name = "open-assistant"
version = "1.1.7"
description = "AI-powered personal assistant for task automation and integration"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BUSL-1.1" }
authors = [
    { name = "Open Assistant Contributors" }
]
keywords = ["assistant", "automation", "ai", "integration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "apscheduler>=3.10.4",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "openai>=1.3.0",
    "tiktoken>=0.5.0",
    "google-api-python-client>=2.115.0",
    "google-ads>=24.0.0",
    "msal>=1.26.0",
    "notion-client>=2.2.1",
    "webdavclient3>=3.14.6",
    "cryptography>=42.0.0",
    "aiohttp>=3.9.3",
    "requests>=2.31.0",
    "playwright>=1.41.0",
    "nest-asyncio>=1.6.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "black>=26.1.0",
    "google-auth-oauthlib>=1.2.4",
    "langchain>=0.1.0",
    "onnxruntime>=1.17.0",
    "tokenizers>=0.15.0",
    "huggingface-hub>=0.20.0",
    "numpy>=1.24.0",
    "fastapi-sso>=0.10.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=5.0.0",
    "python-docx>=1.1.0",
    "mistralai>=1.0.0,<2.0.0",
    "openpyxl>=3.1.0",
    "slack-sdk>=3.27.0",
    "scrapling>=0.3.0",
    "msgspec>=0.18.0",
    "patchright>=1.50.0",
    "curl_cffi>=0.7.0",
    "browserforge>=1.0.0",
    "groq>=0.4.0",
    "markdown>=3.5.0",
    "fpdf2>=2.7.0",
    "python-jose[cryptography]==3.3.0",
    "gnews>=0.4.0",
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "seaborn>=0.13.0",
    "scipy>=1.12.0",
    "kaleido>=0.2.1",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
assistant = "src.main:main"
assistant-db = "src.core.database:main"

[project.urls]
Homepage = "https://open-assistant.org"
Documentation = "https://github.com/open-assistant-org/open-assistant/blob/main/README.md"
Repository = "https://github.com/open-assistant-org/open-assistant"
Issues = "https://github.com/open-assistant-org/open-assistant/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "apscheduler.*",
    "webdavclient3.*",
    "notion_client.*",
    "msal.*",
    "jose.*",
    "gnews.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: Integration tests that may require external services",
    "slow: Tests that take a long time to run",
    "migration: Tests related to settings migration",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
